@@ -27,5 +27,7 @@ void MenuActivate1Arg(PyMOLGlobals *G,int x,int y,int last_x,int last_y,
                       int passive, char *name, char *arg1);
 void MenuActivate2Arg(PyMOLGlobals *G,int x,int y,int last_x,int last_y,
                       int passive, char *name,char *sele1,char *sele2);
+void MenuActivate3fv(PyMOLGlobals *G,int x,int y,int last_x,int last_y,int passive,
+                      char *name,float *xyz);
 
 #endif
