@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2009-05-18 Warren L. DeLano <warren@delsci.com>	
+
+	* pseudoatom labeling via main menu right-click
+	
 2009-05-13 Warren L. DeLano <warren@delsci.com>	
 
 	* fixed bug with names containing 'model' in selection macros
